--- a/Notebooks/Analysis.ipynb
+++ b/Notebooks/Analysis.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "dbf9faad-f5d0-4706-affa-58ad8242248a",
    "metadata": {},
    "outputs": [
@@ -50,8 +50,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 11min 34s, sys: 423 ms, total: 11min 34s\n",
-      "Wall time: 10.7 s\n"
+      "CPU times: user 10min 30s, sys: 16.2 s, total: 10min 46s\n",
+      "Wall time: 4.2 s\n"
      ]
     },
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1089a7d9-b28b-46be-a750-352213b889f9",
    "metadata": {},
    "outputs": [
@@ -147,31 +147,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 25s, sys: 220 ms, total: 1min 25s\n",
-      "Wall time: 857 ms\n",
-      "CPU times: user 2min 28s, sys: 115 ms, total: 2min 28s\n",
-      "Wall time: 2.29 s\n",
-      "CPU times: user 1min 35s, sys: 641 ms, total: 1min 35s\n",
-      "Wall time: 1.33 s\n",
-      "40072 34784 541107\n"
+      "CPU times: user 1min 25s, sys: 199 ms, total: 1min 26s\n",
+      "Wall time: 977 ms\n",
+      "CPU times: user 2min 39s, sys: 240 ms, total: 2min 39s\n",
+      "Wall time: 2.7 s\n",
+      "CPU times: user 1min 30s, sys: 649 ms, total: 1min 30s\n",
+      "Wall time: 1.9 s\n",
+      "40015 34783 541107\n"
      ]
     }
    ],
    "source": [
-    "last_october_block = get_block_height_for_date('2024-11-01') - 1\n",
+    "last_october_block = get_block_height_for_date('2024-10-31')\n",
     "\n",
-    "%time ww2_coinjoins = chain.filter_coinjoin_txes(0, last_october_block, \"ww2\")\n",
-    "%time ww1_coinjoins = chain.filter_coinjoin_txes(0, last_october_block, \"ww1\")\n",
-    "%time wp_coinjoins = chain.filter_coinjoin_txes(0, last_october_block, \"wp\")\n",
-    "print(len(ww2_coinjoins), len(ww1_coinjoins), len(wp_coinjoins))"
+    "%time ww2_coinjoins = chain.filter_coinjoin_txes(0, last_october_block, \"wasabi2\")\n",
+    "%time ww1_coinjoins = chain.filter_coinjoin_txes(0, last_october_block, \"wasabi1\")\n",
+    "%time sw_coinjoins = chain.filter_coinjoin_txes(0, last_october_block, \"whirlpool\")\n",
+    "print(len(ww2_coinjoins), len(ww1_coinjoins), len(sw_coinjoins))"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "a2b16498-8ca8-48da-85e1-36571fff7de9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Number of coinjoins in the wild"
    ]
@@ -204,13 +202,13 @@
     "\n",
     "weekly_counts_ww2, label_1 = process_transactions(ww2_coinjoins, \"Wasabi Wallet 2 CoinJoins\")\n",
     "weekly_counts_ww1, label_2 = process_transactions(ww1_coinjoins, \"Wasabi Wallet 1 CoinJoins\")\n",
-    "weekly_counts_wp, label_3 = process_transactions(wp_coinjoins, \"Samourai Whirlpool CoinJoins\")\n",
+    "weekly_counts_sw, label_3 = process_transactions(sw_coinjoins, \"Samourai Whirlpool CoinJoins\")\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "plt.plot(weekly_counts_ww2.index, weekly_counts_ww2.values, label=label_1, linewidth=0.8)\n",
     "plt.plot(weekly_counts_ww1.index, weekly_counts_ww1.values, label=label_2, linewidth=0.8)\n",
-    "plt.plot(weekly_counts_wp.index, weekly_counts_wp.values, label=label_3, linewidth=0.8)\n",
+    "plt.plot(weekly_counts_sw.index, weekly_counts_sw.values, label=label_3, linewidth=0.8)\n",
     "\n",
     "plt.title(\"Weekly Transactions Over Time\")\n",
     "plt.xlabel(\"Time\")\n",
@@ -226,9 +224,7 @@
   {
    "cell_type": "markdown",
    "id": "b77ce8ab-8536-41f9-bd91-cd20ccd4512a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Liquidity"
    ]
@@ -267,7 +263,7 @@
     "\n",
     "liq1, lab1 = process_input_liquidity(ww2_coinjoins, \"Wasabi2 Input Liquidity\")\n",
     "liq2, lab2 = process_input_liquidity(ww1_coinjoins, \"Wasabi1 Input Liquidity\")\n",
-    "liq3, lab3 = process_input_liquidity(wp_coinjoins, \"Whirlpool Input Liquidity\")"
+    "liq3, lab3 = process_input_liquidity(sw_coinjoins, \"Whirlpool Input Liquidity\")"
    ]
   },
   {
@@ -333,16 +329,14 @@
   {
    "cell_type": "markdown",
    "id": "d0b9cd55-be6a-4af4-ac2f-d060dee5823c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Traverses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "d39d1b61-d1f3-4896-aaa7-308f04f4366a",
    "metadata": {},
    "outputs": [
@@ -350,20 +344,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 26min 20s, sys: 8.97 s, total: 26min 29s\n",
-      "Wall time: 1min 53s\n"
+      "CPU times: user 31min 45s, sys: 4.38 s, total: 31min 50s\n",
+      "Wall time: 1min 59s\n"
      ]
     }
    ],
    "source": [
-    "one_random_wp_cj = chain.tx_with_hash(\"00ab23721356a159b695060b3975469fa0703e55398e9123ef59d2a5b94b1058\")\n",
-    "\n",
     "%time traverses = chain.find_traverses_between_coinjoins(0, get_block_height_for_date('2024-10-31'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3406b255-6d51-4115-ae17-16d37224f61e",
    "metadata": {},
    "outputs": [],
@@ -376,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7eea2504-f523-4d7b-b232-c4948e88bfbf",
    "metadata": {},
    "outputs": [
@@ -445,7 +437,7 @@
     "plt.legend(title=\"From -> To\")\n",
     "plt.tight_layout()\n",
     "plt.grid(True, which=\"both\", ls=\"--\", linewidth=0.5)\n",
-    "plt.savefig(\"/mnt/blocksci/traverses.png\")\n",
+    "# plt.savefig(\"/mnt/blocksci/traverses.png\")\n",
     "\n",
     "\n",
     "plt.show()\n"
@@ -462,16 +454,14 @@
   {
    "cell_type": "markdown",
    "id": "350ffcdb-2329-4e02-a83c-e75cca2cf753",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### calculation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ccd6eaa2-25f2-4b31-938f-81eecb4ec04a",
    "metadata": {},
    "outputs": [],
@@ -604,16 +594,14 @@
   {
    "cell_type": "markdown",
    "id": "d9d28b48-f0e6-4d7e-85d3-b1ee3566cc3f",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "86ddf3f1-5513-4fd8-9699-0814bc133970",
    "metadata": {},
    "outputs": [
@@ -621,18 +609,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 28s, sys: 1min 39s, total: 4min 7s\n",
-      "Wall time: 5.26 s\n",
-      "CPU times: user 27min 29s, sys: 9.08 s, total: 27min 38s\n",
-      "Wall time: 13.2 s\n",
-      "CPU times: user 28min 12s, sys: 5.37 s, total: 28min 17s\n",
-      "Wall time: 13.4 s\n",
-      "CPU times: user 28min 30s, sys: 6.01 s, total: 28min 36s\n",
-      "Wall time: 13.4 s\n",
-      "CPU times: user 29min 7s, sys: 5.67 s, total: 29min 13s\n",
-      "Wall time: 13.8 s\n",
-      "CPU times: user 28min 32s, sys: 3.47 s, total: 28min 36s\n",
-      "Wall time: 14 s\n"
+      "CPU times: user 3min 7s, sys: 1.67 s, total: 3min 9s\n",
+      "Wall time: 3.79 s\n",
+      "CPU times: user 30min 4s, sys: 5 s, total: 30min 9s\n",
+      "Wall time: 17 s\n",
+      "CPU times: user 31min 10s, sys: 5.92 s, total: 31min 16s\n",
+      "Wall time: 19.3 s\n",
+      "CPU times: user 28min 21s, sys: 3.96 s, total: 28min 25s\n",
+      "Wall time: 15.1 s\n",
+      "CPU times: user 30min 18s, sys: 7.62 s, total: 30min 26s\n",
+      "Wall time: 16.1 s\n",
+      "CPU times: user 29min 54s, sys: 6.85 s, total: 30min 1s\n",
+      "Wall time: 17.6 s\n"
      ]
     },
     {
@@ -649,18 +637,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 59.2 s, sys: 636 ms, total: 59.9 s\n",
+      "CPU times: user 1min 39s, sys: 858 ms, total: 1min 40s\n",
       "Wall time: 1.42 s\n",
-      "CPU times: user 22min 31s, sys: 3.89 s, total: 22min 35s\n",
-      "Wall time: 12.4 s\n",
-      "CPU times: user 23min 21s, sys: 4.66 s, total: 23min 26s\n",
-      "Wall time: 12.4 s\n",
-      "CPU times: user 23min 36s, sys: 4.17 s, total: 23min 40s\n",
+      "CPU times: user 27min 4s, sys: 4.82 s, total: 27min 9s\n",
+      "Wall time: 12.6 s\n",
+      "CPU times: user 27min 53s, sys: 5.98 s, total: 27min 59s\n",
+      "Wall time: 13.8 s\n",
+      "CPU times: user 28min 55s, sys: 6.58 s, total: 29min 2s\n",
       "Wall time: 14.2 s\n",
-      "CPU times: user 22min 11s, sys: 3.61 s, total: 22min 15s\n",
-      "Wall time: 20.7 s\n",
-      "CPU times: user 22min 21s, sys: 2.57 s, total: 22min 24s\n",
-      "Wall time: 22.7 s\n"
+      "CPU times: user 29min 53s, sys: 9.03 s, total: 30min 2s\n",
+      "Wall time: 15.2 s\n",
+      "CPU times: user 28min 31s, sys: 5.84 s, total: 28min 37s\n",
+      "Wall time: 13.7 s\n"
      ]
     },
     {
@@ -677,18 +665,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 17s, sys: 1.48 s, total: 1min 19s\n",
-      "Wall time: 7.68 s\n",
-      "CPU times: user 33min 49s, sys: 7.46 s, total: 33min 56s\n",
-      "Wall time: 22.7 s\n",
-      "CPU times: user 36min 48s, sys: 8.55 s, total: 36min 56s\n",
-      "Wall time: 21.8 s\n",
-      "CPU times: user 42min 14s, sys: 10.2 s, total: 42min 24s\n",
-      "Wall time: 18 s\n",
-      "CPU times: user 43min 29s, sys: 10.6 s, total: 43min 40s\n",
-      "Wall time: 20 s\n",
-      "CPU times: user 48min 7s, sys: 6.09 s, total: 48min 14s\n",
-      "Wall time: 23.3 s\n"
+      "CPU times: user 1min 46s, sys: 2.75 s, total: 1min 49s\n",
+      "Wall time: 3.37 s\n",
+      "CPU times: user 36min 59s, sys: 10.7 s, total: 37min 10s\n",
+      "Wall time: 18.5 s\n",
+      "CPU times: user 41min 45s, sys: 11.8 s, total: 41min 57s\n",
+      "Wall time: 23.1 s\n",
+      "CPU times: user 42min 43s, sys: 12.8 s, total: 42min 56s\n",
+      "Wall time: 21.2 s\n",
+      "CPU times: user 45min 18s, sys: 7.88 s, total: 45min 25s\n",
+      "Wall time: 22.6 s\n",
+      "CPU times: user 46min 17s, sys: 10.7 s, total: 46min 27s\n",
+      "Wall time: 25.7 s\n"
      ]
     },
     {
@@ -703,33 +691,33 @@
     }
    ],
    "source": [
-    "%time ww1_original_data = chain.real_anonymity_degradation(0, len(chain), 0, \"ww1\")\n",
-    "%time ww1_after_day_data = chain.real_anonymity_degradation(0, len(chain), 1, \"ww1\")\n",
-    "%time ww1_after_week_data = chain.real_anonymity_degradation(0, len(chain), 7, \"ww1\")\n",
-    "%time ww1_after_month_data = chain.real_anonymity_degradation(0, len(chain), 31, \"ww1\")\n",
-    "%time ww1_after_year_data = chain.real_anonymity_degradation(0, len(chain), 365, \"ww1\")\n",
-    "%time ww1_after_full_data = chain.real_anonymity_degradation(0, len(chain), 365*7, \"ww1\")\n",
+    "%time ww1_original_data = chain.compute_anonymity_degradation(0, len(chain), 0, \"wasabi1\")\n",
+    "%time ww1_after_day_data = chain.compute_anonymity_degradation(0, len(chain), 1, \"wasabi1\")\n",
+    "%time ww1_after_week_data = chain.compute_anonymity_degradation(0, len(chain), 7, \"wasabi1\")\n",
+    "%time ww1_after_month_data = chain.compute_anonymity_degradation(0, len(chain), 31, \"wasabi1\")\n",
+    "%time ww1_after_year_data = chain.compute_anonymity_degradation(0, len(chain), 365, \"wasabi1\")\n",
+    "%time ww1_after_full_data = chain.compute_anonymity_degradation(0, len(chain), 365*7, \"wasabi1\")\n",
     "\n",
     "plot_anonymity_degradation(ww1_original_data, ww1_after_day_data, ww1_after_week_data, ww1_after_month_data, ww1_after_year_data, ww1_after_full_data, \"ww1_multiple_txes\")\n",
     "\n",
-    "%time ww2_original_data = chain.real_anonymity_degradation(0, len(chain), 0, \"ww2\")\n",
-    "%time ww2_after_day_data = chain.real_anonymity_degradation(0, len(chain), 1, \"ww2\")\n",
-    "%time ww2_after_week_data = chain.real_anonymity_degradation(0, len(chain), 7, \"ww2\")\n",
-    "%time ww2_after_month_data = chain.real_anonymity_degradation(0, len(chain), 31, \"ww2\")\n",
-    "%time ww2_after_year_data = chain.real_anonymity_degradation(0, len(chain), 365, \"ww2\")\n",
-    "%time ww2_after_full_data = chain.real_anonymity_degradation(0, len(chain), 365*7, \"ww2\")\n",
+    "%time ww2_original_data = chain.compute_anonymity_degradation(0, len(chain), 0, \"wasabi2\")\n",
+    "%time ww2_after_day_data = chain.compute_anonymity_degradation(0, len(chain), 1, \"wasabi2\")\n",
+    "%time ww2_after_week_data = chain.compute_anonymity_degradation(0, len(chain), 7, \"wasabi2\")\n",
+    "%time ww2_after_month_data = chain.compute_anonymity_degradation(0, len(chain), 31, \"wasabi2\")\n",
+    "%time ww2_after_year_data = chain.compute_anonymity_degradation(0, len(chain), 365, \"wasabi2\")\n",
+    "%time ww2_after_full_data = chain.compute_anonymity_degradation(0, len(chain), 365*7, \"wasabi2\")\n",
     "\n",
     "plot_anonymity_degradation(ww2_original_data, ww2_after_day_data, ww2_after_week_data, ww2_after_month_data, ww2_after_year_data, ww2_after_full_data, \"ww2_multiple_txes\")\n",
     "\n",
     "\n",
-    "%time wp_original_data = chain.real_anonymity_degradation(0, len(chain), 0, \"wp\")\n",
-    "%time wp_after_day_data = chain.real_anonymity_degradation(0, len(chain), 1, \"wp\")\n",
-    "%time wp_after_week_data = chain.real_anonymity_degradation(0, len(chain), 7, \"wp\")\n",
-    "%time wp_after_month_data = chain.real_anonymity_degradation(0, len(chain), 31, \"wp\")\n",
-    "%time wp_after_year_data = chain.real_anonymity_degradation(0, len(chain), 365, \"wp\")\n",
-    "%time wp_after_full_data = chain.real_anonymity_degradation(0, len(chain), 365*7, \"wp\")\n",
+    "%time sw_original_data = chain.compute_anonymity_degradation(0, len(chain), 0, \"whirlpool\")\n",
+    "%time sw_after_day_data = chain.compute_anonymity_degradation(0, len(chain), 1, \"whirlpool\")\n",
+    "%time sw_after_week_data = chain.compute_anonymity_degradation(0, len(chain), 7, \"whirlpool\")\n",
+    "%time sw_after_month_data = chain.compute_anonymity_degradation(0, len(chain), 31, \"whirlpool\")\n",
+    "%time sw_after_year_data = chain.compute_anonymity_degradation(0, len(chain), 365, \"whirlpool\")\n",
+    "%time sw_after_full_data = chain.compute_anonymity_degradation(0, len(chain), 365*7, \"whirlpool\")\n",
     "\n",
-    "plot_anonymity_degradation(wp_original_data, wp_after_day_data, wp_after_week_data, wp_after_month_data, wp_after_year_data, wp_after_full_data, \"sw_multiple_txes\")"
+    "plot_anonymity_degradation(sw_original_data, sw_after_day_data, sw_after_week_data, sw_after_month_data, sw_after_year_data, sw_after_full_data, \"sw_multiple_txes\")"
    ]
   }
  ],
