--- a/Notebooks/cj_analysis.ipynb
+++ b/Notebooks/cj_analysis.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "ca445310",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Block(tx_count=3077, height=859425, header_hash=000000000000000000001ea21b463c4409080277fc235001ddfa2b844d5ed72a, version=560693248, timestamp=1725225507, bits=386082139, nonce=3205150816)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import blocksci\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,9 +28,28 @@
     "    return chain.range(date)[0].height\n",
     "\n",
     "def get_block_height_range(start: str, end: str) -> Tuple[int, int]:\n",
-    "    return get_block_height_for_date(start), get_block_height_for_date(end)\n",
+    "    return get_block_height_for_date(start), get_block_height_for_date(end)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3afc52e-f9ad-470e-8881-cfead002d808",
+   "metadata": {},
+   "source": [
+    "# Long lost analyses\n",
     "\n",
-    "chain.blocks[-1]"
+    "Over the time we gathered a lot of results we wanted to cross validate.\n",
+    "Here we try to do that"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8a1dc0d-fba3-47b9-9a3f-24f90d37b00d",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Dumplings comparisons"
    ]
   },
   {
@@ -54,29 +62,17 @@
     "import json\n",
     "\n",
     "wasabi2_events_file = dumplings_directory / \"wasabi2_events.json\"\n",
-    "# wasabi2_txs_file = dumplings_directory / \"wasabi2_txs.json\"\n",
     "wasabi_events_file = dumplings_directory / \"wasabi1_events.json\"\n",
-    "# wasabi_txs_file = dumplings_directory / \"wasabi_txs.json\"\n",
     "whirlpool_events_file = dumplings_directory / \"whirlpool_events.json\"\n",
-    "# whirlpool_txs_file = dumplings_directory / \"whirlpool_txs.json\"\n",
     "\n",
     "with open(wasabi2_events_file) as f:\n",
     "    wasabi2_events = json.load(f)\n",
     "\n",
-    "# with open(wasabi2_txs_file) as f:\n",
-    "#     wasabi2_txs = json.load(f)\n",
-    "\n",
     "with open(wasabi_events_file) as f:\n",
     "    wasabi_events = json.load(f)\n",
     "\n",
-    "# with open(wasabi_txs_file) as f:\n",
-    "#     wasabi_txs = json.load(f)\n",
-    "\n",
     "with open(whirlpool_events_file) as f:\n",
-    "    whirlpool_events = json.load(f)\n",
-    "\n",
-    "# with open(whirlpool_txs_file) as f:\n",
-    "#     whirlpool_txs = json.load(f)"
+    "    whirlpool_events = json.load(f)"
    ]
   },
   {
@@ -173,25 +169,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "eca3c7e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 29 s, sys: 2h 13min 50s, total: 2h 14min 19s\n",
-      "Wall time: 35.9 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%time filtered_ww1_events = chain.filter_coinjoin_txes(0, len(chain), \"ww2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "3f1089b4",
    "metadata": {},
@@ -207,6 +184,8 @@
     }
    ],
    "source": [
+    "%time filtered_ww1_events = chain.filter_coinjoin_txes(0, len(chain), \"ww1\")\n",
+    "\n",
     "for events in ((filtered_ww1_events, \"wasabi1\", wasabi_events),):\n",
     "    s, name, e = events\n",
     "    d = set(map(lambda x: str(x.hash), s))\n",
@@ -262,10 +241,20 @@
   {
    "cell_type": "markdown",
    "id": "5210d4e4",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Basic analysis\n",
-    "Here are some basic analyses for the coinjoins just to make sure nothign fishy is happening"
+    "Here are some basic analyses for the coinjoins just to make sure nothing fishy is happening."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29483803-b9e1-4ca9-bef2-21940e21f1b2",
+   "metadata": {},
+   "source": [
+    "## Python-evaluation based mapreduce"
    ]
   },
   {
@@ -287,12 +276,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e480ffc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.8.10 (default, Nov  7 2024, 13:10:47) \n",
+      "[GCC 9.4.0]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'wasabi2_events' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 7\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(sys\u001b[38;5;241m.\u001b[39mversion)\n\u001b[1;32m      5\u001b[0m unique_counts \u001b[38;5;241m=\u001b[39m chain\u001b[38;5;241m.\u001b[39mmap_spliterator(\n\u001b[1;32m      6\u001b[0m     map_func\u001b[38;5;241m=\u001b[39mfind_number_of_unique_txs, \n\u001b[0;32m----> 7\u001b[0m     keys\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlist\u001b[39m(\u001b[43mwasabi2_events\u001b[49m\u001b[38;5;241m.\u001b[39mkeys()), \n\u001b[1;32m      8\u001b[0m     data_directory\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mstr\u001b[39m(parser_data_directory), \n\u001b[1;32m      9\u001b[0m     workers\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m64\u001b[39m,\n\u001b[1;32m     10\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'wasabi2_events' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "unique_counts = chain.map_spliterator(map_func=find_number_of_unique_txs, keys=list(wasabi2_events.keys()), data_directory=str(parser_data_directory), workers=64)"
+    "#!python --version\n",
+    "import sys\n",
+    "print(sys.version)\n",
+    "\n",
+    "unique_counts = chain.map_spliterator(\n",
+    "    map_func=find_number_of_unique_txs, \n",
+    "    keys=list(wasabi2_events.keys()), \n",
+    "    data_directory=str(parser_data_directory), \n",
+    "    workers=64,\n",
+    ")"
    ]
   },
   {
@@ -641,10 +659,6 @@
     "    return counts_of_consolidated_txes_in_one_hop\n",
     "\n",
     "\n",
-    "# w2_consolidation_1hop = compute_consolidated_txes_in_one_hop(wasabi2_consolidation)\n",
-    "# w_consolidation_1hop = compute_consolidated_txes_in_one_hop(wasabi_consolidation)\n",
-    "# whirl_consolidation_1hop = compute_consolidated_txes_in_one_hop(whirlpool_consolidation)\n",
-    "\n",
     "def plot_barplot_from_dictionary(dct):\n",
     "    plt.bar(range(len(dct)), list(dct.values()), align='center')\n",
     "    plt.xticks(range(len(dct)), list(dct.keys()))\n",
@@ -655,13 +669,11 @@
     "def make_graph(data, name):\n",
     "    fig, (ax1, ax2, ax3) = plt.subplots(nrows=3, ncols=1, figsize=(8, 9))\n",
     "\n",
-    "    # Plot the data for 2-8 on the first subplot\n",
     "    ax1.bar(list(range(2, 9)), [data[key] for key in range(2, 9)])\n",
     "    ax1.set_xlabel('X-axis')\n",
     "    ax1.set_ylabel('Y-axis (2-8)')\n",
     "    ax1.set_title(f'{name}: Bar Plot (2-8)')\n",
     "\n",
-    "    # Plot the data for 9-15 on the second subplot\n",
     "    ax2.bar(list(range(9, 16)), [data[key] for key in range(9, 16)])\n",
     "    ax2.set_xlabel('X-axis')\n",
     "    ax2.set_ylabel('Y-axis (9-15)')\n",
@@ -672,30 +684,8 @@
     "    ax3.set_ylabel('Y-axis (16-22)')\n",
     "    ax3.set_title(f'{name}: Bar Plot (16-22)')\n",
     "\n",
-    "    # Adjust the spacing between subplots\n",
     "    plt.subplots_adjust(hspace=0.5)\n",
-    "\n",
-    "    # Display the plot\n",
     "    plt.show()\n",
-    "\n",
-    "# print(f\"w2 unpaired: {w2_consolidation_1hop[1]}\")\n",
-    "# print(f\"w unpaired: {w_consolidation_1hop[1]}\")\n",
-    "# print(f\"whirlpool unpaired: {whirl_consolidation_1hop[1]}\")\n",
-    "\n",
-    "# make_graph(w2_consolidation_1hop, \"wasabi2\")\n",
-    "# make_graph(w_consolidation_1hop, \"wasabi\")\n",
-    "# make_graph(whirl_consolidation_1hop, \"whirlpool\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# w2_2hop_consolidated = compute_consolidated_txes_in_one_hop(wasabi2_consolidation_two_hop)\n",
-    "# w_2hop_consolidated = compute_consolidated_txes_in_one_hop(wasabi_consolidation_two_hop)\n",
-    "# wh_2hop_consolidated = compute_consolidated_txes_in_one_hop(whirlpool_consolidation_two_hop)\n",
-    "\n",
-    "\n",
-    "# make_graph(w2_2hop_consolidated, \"two hop consolidation to one output wasabi2\")\n",
-    "# make_graph(w_2hop_consolidated, \"two hop consolidation to one output wasabi\")\n",
-    "# make_graph(wh_2hop_consolidated, \"two hop consolidation to one output whirlpool\")\n",
     "\n",
     "print(len(res_w2))\n",
     "w2_consolidation_3hop = compute_consolidated_txes_in_one_hop(res_w2)\n",
@@ -781,7 +771,9 @@
   {
    "cell_type": "markdown",
    "id": "82fecef9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# embrace VUT\n",
     "\n",
@@ -929,10 +921,11 @@
   {
    "cell_type": "markdown",
    "id": "8b90d58e",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Analysis over the coinjoins (friends do not pay)\n",
-    "**(petrs request)**\n",
     "\n",
     "- export all transactions `X`:\n",
     "    - X is 2 hops away from a ww2 coinjoin\n",
@@ -1293,7 +1286,9 @@
   {
    "cell_type": "markdown",
    "id": "9f8a2c8d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Real consolidation analysis\n",
     "\n",
