fix: actual combination of heuristics

--- a/Notebooks/Regtest.ipynb
+++ b/Notebooks/Regtest.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4ce0098b-d13c-4c9c-92c7-6ee8911c775d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading CoinJoin configuration\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import blocksci\n",
     "import matplotlib.pyplot as plt\n",
@@ -39,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7ba6dc2c-b962-49c9-8f58-afcb6a6ec887",
    "metadata": {},
    "outputs": [
@@ -59,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "b02d9685-7414-4a9f-8953-3be641fdcf71",
    "metadata": {},
    "outputs": [
@@ -67,17 +59,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.2 ms, sys: 93.9 ms, total: 109 ms\n",
-      "Wall time: 25.4 ms\n",
-      "CPU times: user 18 µs, sys: 65 µs, total: 83 µs\n",
-      "Wall time: 87 µs\n",
+      "CPU times: user 18.3 ms, sys: 65.4 ms, total: 83.7 ms\n",
+      "Wall time: 24.2 ms\n",
+      "CPU times: user 83 µs, sys: 0 ns, total: 83 µs\n",
+      "Wall time: 88.5 µs\n",
       "38\n"
      ]
     }
    ],
    "source": [
-    "ww2_cjs = chain.blocks.txes.where(lambda tx: tx.is_wasabi2_coinjoin).to_list()\n",
-    "%time ww2_cjs = chain.filter_coinjoin_txes(0, len(chain), \"ww2\")\n",
+    "%time ww2_cjs = chain.filter_coinjoin_txes(0, len(chain), \"wasabi2\")\n",
     "%time ww2_cjs_hashes = set(str(tx.hash) for tx in ww2_cjs)\n",
     "god_set_of_all_coinjoins = ww2_cjs_hashes\n",
     "print(len(ww2_cjs))"
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e8df9d46-a5d7-4613-ac48-d5be791ad8a1",
    "metadata": {},
    "outputs": [
@@ -93,13 +84,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.5 ms, sys: 59.7 ms, total: 77.2 ms\n",
-      "Wall time: 18.9 ms\n"
+      "CPU times: user 16.3 ms, sys: 87.3 ms, total: 104 ms\n",
+      "Wall time: 25 ms\n",
+      "0.4467380357095984\n"
      ]
     }
    ],
    "source": [
-    "%time ww2_original_data = chain.real_anonymity_degradation(0, len(chain), 0, \"ww2\")"
+    "from math import log2, factorial\n",
+    "s = 0\n",
+    "%time ww2_original_data = chain.compute_anonymity_degradation(0, len(chain), 0, \"wasabi2\")\n",
+    "for d, v in ww2_original_data.items():\n",
+    "    s += v / log2(factorial(d.output_count))\n",
+    "\n",
+    "\n",
+    "print(s / len(ww2_original_data))"
    ]
   },
   {
